--- a/src/Components/pages/RegisterPage/register.module.css
+++ b/src/Components/pages/RegisterPage/register.module.css
@@ -1,10 +1,6 @@
 /*---------------------------------------
   SIDEBAR              
 -----------------------------------------*/
-/* .tracker {
-    margin: 0rem 2rem 1rem 2rem;
-    font-size: 16px;
-} */
 .register_content_container {
     display: flex;
     width: 100%;
@@ -17,4 +13,78 @@
     align-items: center;
     background-color: #eeeeee;
     flex: 0 0 max(250px);
+}
+
+/*---------------------------------------
+  CUSTOM FORM               
+-----------------------------------------*/
+.formGroup {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items: left;
+}
+
+
+.customForm {
+    border-radius: var(--border-radius-large);
+    padding: 0.4em 1.4em;
+    outline: none;
+    transition: all 0.3s;
+    display: flex;
+}
+
+.formContainer {
+    background: #fff;
+    border-radius: var(--border-radius-medium);
+    font-family: "Montserrat Alternates";
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+    min-width: 200px;
+    align-self: center;
+    margin: 0 auto;
+}
+
+.formContainer input:hover,
+.formContainer input:focus {
+    border-color: var(--primary-hover-color);
+}
+
+.formContent {
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+
+.formContent header {
+    margin-bottom: 2rem;
+    align-self: center;
+}
+
+.formContent footer {
+    margin-top: 2rem;
+    display: flex;
+    justify-content: space-between;
+    font-size: 1em;
+}
+
+.error {
+    color: red;
+    font-size: 12px;
+    width: fit-content;
+    display: inline;
+    align-self: flex-end;
+    margin-right: 3em;
+}
+
+.formControl {
+    height: 2em;
+    width: 60%;
+    margin-bottom: 0.2em;
+    padding-left: 0.7em;
+    margin-left: 0em;
+    border: 1px solid #ddd;
+    border-radius: var(--border-radius-small);
+    outline: none;
+    text-align: left;
 }
