--- a/src/Components/pages/WelcomePage/custom-block.module.css
+++ b/src/Components/pages/WelcomePage/custom-block.module.css
@@ -57,7 +57,7 @@
 .customBlock h2,
 .customBlock p {
     position: relative;
-    z-index: 2;
+    z-index: 1;
 }
 
 .customBlockBalance::before {
@@ -115,6 +115,7 @@
 
 .customBlock.primaryBg {
     background: var(--primary-bg-color);
+    overflow: visible;
 }
 
 .customBlockBottom {
@@ -124,12 +125,73 @@
     justify-content: center;
     text-align: center;
     gap: 1.4em;
+    overflow: visible;
 }
 
 .customBlock.customBlockBottom small {
     text-transform: none;
 }
 
+/*---------------------------------------
+  BANKING ACTION BUTTONS START SECTION
+-----------------------------------------*/
+.transactionBtns {
+    display: flex;
+    gap: 1.2em;
+    overflow: visible;
+
+}
+
+.transactionBtn {
+    position: relative;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 1em;
+    padding: 8px 12px;
+    z-index: 3;
+    cursor: pointer;
+    overflow: visible; 
+}
+
+.transactionBtn .icon {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    overflow: visible;
+
+}
+
+.transactionBtn::before {
+    content: attr(data-text);
+    position: absolute;
+    top: -30px; 
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 8px;
+    border-radius: 5px;
+    transition: opacity 0.3s, top 0.3s; 
+    z-index: 3;
+    overflow: visible;
+    pointer-events: none;
+}
+
+.transactionBtn:hover::before {
+    opacity: 5;
+    top: -50px;
+    overflow: visible;
+}
+
+.transactionBtn:hover {
+    color: #0056b3;
+}
+
+/*---------------------------------------
+  BANKING ACTION BUTTONS END SECTION
+-----------------------------------------*/
 .customBlockIcon {
     position: relative;
     color: var(--white-color);
@@ -141,22 +203,6 @@
     padding: 8px 12px;
     cursor: pointer;
     overflow: visible; 
-}
-
-.customBlockIcon::before {
-    content: attr(data-text);
-    position: absolute;
-    top: -50px; 
-    left: 50%;
-    transform: translateX(-50%);
-    opacity: 0;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
-    padding: 8px;
-    border-radius: 5px;
-    transition: opacity 0.3s, top 0.3s;
-    z-index: 5;
-    pointer-events: none;
 }
 
 .customBlockIcon:hover {
