--- a/src/Components/pages/WelcomePage/assets/Friends/friends.module.css
+++ b/src/Components/pages/WelcomePage/assets/Friends/friends.module.css
@@ -27,6 +27,10 @@
 
 .friendInfo {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    margin: 0.5em 0em;
 }
 
 .friendButtons {
