--- a/src/Components/pages/WelcomePage/assets/Quicksend/quicksend.module.css
+++ b/src/Components/pages/WelcomePage/assets/Quicksend/quicksend.module.css
@@ -51,8 +51,29 @@
 
 .profileImage {
     border-radius: var(--border-radius-medium);
+    position: relative;
     width: 50px;
     height: 50px;
+    z-index: 6;
+    cursor: pointer;
+    overflow: visible; 
+}
+
+.profileImage::before {
+    content: attr(data-key);
+    position: absolute;
+    top: -30px; 
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 1;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 8px;
+    border-radius: 5px;
+    transition: opacity 0.3s, top 0.3s; 
+    z-index: 7;
+    overflow: visible;
+    pointer-events: none;
 }
 
 .profileImage:hover {
