--- a/src/Components/pages/WelcomePage/custom-block.module.css
+++ b/src/Components/pages/WelcomePage/custom-block.module.css
@@ -31,21 +31,24 @@
     width: 40px;
     height: 40px;
 }
+
 .sendMonkeyContainer {
     display: flex;
     justify-content: flex-start;
     flex-wrap: wrap;
+    overflow: visible;
     gap: 0.4em;
 }
+
 .profileRoundedIcon {
     width: 50px;
     height: 50px;
     color: var(--primary-bg-color);
 }
+
 .profileRoundedIcon:hover {
     color: var(--heading-color);
     background-color: whitesmoke;
-    
 }
 
 .customBlockProfileImageWrap {
@@ -54,6 +57,7 @@
     position: relative;
     margin-bottom: min(0.5em);
 }
+
 .customBlock h2,
 .customBlock p {
     position: relative;
@@ -118,6 +122,10 @@
     overflow: visible;
 }
 
+.primaryBg {
+    overflow: visible;
+}
+
 .customBlockBottom {
     background: var(--third-bg-color);
     position: relative;
@@ -139,7 +147,6 @@
     display: flex;
     gap: 1.2em;
     overflow: visible;
-
 }
 
 .transactionBtn {
@@ -151,7 +158,7 @@
     padding: 8px 12px;
     z-index: 3;
     cursor: pointer;
-    overflow: visible; 
+    overflow: visible;
 }
 
 .transactionBtn .icon {
@@ -159,13 +166,12 @@
     width: 30px;
     height: 30px;
     overflow: visible;
-
 }
 
 .transactionBtn::before {
     content: attr(data-text);
     position: absolute;
-    top: -30px; 
+    top: -30px;
     left: 50%;
     transform: translateX(-50%);
     opacity: 0;
@@ -173,7 +179,7 @@
     color: white;
     padding: 8px;
     border-radius: 5px;
-    transition: opacity 0.3s, top 0.3s; 
+    transition: opacity 0.3s, top 0.3s;
     z-index: 3;
     overflow: visible;
     pointer-events: none;
@@ -202,7 +208,7 @@
     border-radius: 1em;
     padding: 8px 12px;
     cursor: pointer;
-    overflow: visible; 
+    overflow: visible;
 }
 
 .customBlockIcon:hover {
