--- a/src/Components/pages/RegisterPage/register.module.css
+++ b/src/Components/pages/RegisterPage/register.module.css
@@ -3,6 +3,7 @@
 -----------------------------------------*/
 .register_content_container {
     display: flex;
+    flex-direction: column;
     width: 100%;
 }
 
@@ -12,9 +13,12 @@
     justify-content: space-around;
     align-items: center;
     background-color: #eeeeee;
-    flex: 0 0 max(250px);
+    flex: 0 0 max(150px);
 }
 
+.sidebarIcon {
+    display: none;
+}
 /*---------------------------------------
   CUSTOM FORM               
 -----------------------------------------*/
@@ -87,4 +91,25 @@
     border-radius: var(--border-radius-small);
     outline: none;
     text-align: left;
+}
+
+@media (min-width: 700px) {
+    .sidebar_container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        background-color: #eeeeee;
+        flex: 0 0 max(250px);
+    }
+
+    .sidebarIcon {
+        display: block;
+    }
+
+    .register_content_container {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+    }
 }
