--- a/src/Components/pages/HomePage/about.module.css
+++ b/src/Components/pages/HomePage/about.module.css
@@ -29,6 +29,23 @@
     align-items: center;
     flex: 1 1;
     text-align: center;
+    transition: all 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.feature:hover {
+    box-shadow: 10px 10px 30px rgba(0,0,0,0.19), 0 3px 3px rgba(0,0,0,0.23);
+    transform: translateY(-3px);
+    animation: move-up 0.2s cubic-bezier(0.075, 0.82, 0.165, 1) forwards;
+}
+
+@keyframes move-up {
+    0% {
+        transform: translateY(0);
+    }
+
+    100% {
+        transform: translateY(-10px);
+    }
 }
 
 .featureImg {
@@ -69,8 +86,8 @@
         padding: 0em 20em;
     }
     .featureImg {
-        width: 130px;
-        height: 130px;
+        width: 120px;
+        height: 120px;
     }
     .features {
         gap: 1em;
