--- a/src/css/site.css
+++ b/src/css/site.css
@@ -7,4 +7,4 @@
 @import url('./site-layout.css');
 @import url('./responsive.css');
 
-/* @import url("./componets/sidebar.css"); */
+/* @import url("./components/sidebar.css"); */
