update app localization to english and fix some typos and imports

--- a/src/Components/pages/WelcomePage/assets/addfriends.module.css
+++ b/src/Components/pages/WelcomePage/assets/addfriends.module.css
@@ -1,4 +1,6 @@
 .friendsForm {
-    display: block;
-    justify-content: left;
+    display: flex;
+    flex-direction: row;
+    gap: 0.5em;
+    justify-content: flex-start;
 }
