--- a/src/pages/header/site-header.module.css
+++ b/src/pages/header/site-header.module.css
@@ -41,21 +41,6 @@
     }
 }
 
-.buttonLogin {
-    color: #ccdde2ff;
-    font-size: 1em;
-    font-weight: 500;
-    cursor: pointer;
-    transition: 0.4s;
-    margin-bottom: 0em;
-    width: fit-content;
-    margin-top: 0em;
-    padding: 0.1em 0.8em 0px 0.8em;
-    height: 1.8em;
-    border: 1px solid #ccdde2ff;
-    border-radius: 0.6em;
-}
-
 .headerDropdownIcon {
     color: #ccdde2ff;
     width: 25px;
@@ -71,16 +56,32 @@
     border-bottom-left-radius: 0.6em;
 }
 
+.buttonLogin {
+    color: #ccdde2ff;
+    font-size: 1.1em;
+    font-weight: 500;
+    cursor: pointer;
+    transition: 0.4s;
+    margin-bottom: 0em;
+    width: fit-content;
+    margin-top: 0em;
+    padding: 3px 16px;
+    height: 2em;
+    border: 1px solid #ccdde2ff;
+    border-radius: 0.6em;
+}
+
 .buttonRegister {
     background: var(--primary-color);
     color: white;
-    font-size: 1em;
-    padding: 0.1em 0.8em;
+    font-size: 1.1em;
+
+    padding: 3px 16px;
     border: 1px solid transparent;
     font-weight: 500;
     cursor: pointer;
     transition: 0.2s;
-    height: 1.8em;
+    height: 2em;
     width: fit-content;
     border-radius: 0.6em;
     border-bottom-left-radius: 0em;
@@ -272,7 +273,7 @@
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
-        margin-right: 1em;
+        margin-right: 0.5em;
     }
 
     /* Styles for the dropdown menu */
