--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -35,6 +35,12 @@
                     font-size: small;
                     z-index: 1;
                     width: 100%;
+
+                    &:hover:first-child {
+                        background-color: 'transparent';
+                        color: var(--primary-hover-color);
+                        border: 1px solid var(--primary-hover-color);
+                    }
                 }
             }
         }
@@ -100,7 +106,6 @@
         }
 
         .heroSection {
-            
             flex: 5;
             display: flex;
             flex-direction: column;
