--- a/src/css/site.css
+++ b/src/css/site.css
@@ -1,6 +1,6 @@
 @import url('../fonts/Montserrat.css');
 @import url('./base/reset.css');
-@import url('./base/topography.css');
+@import url('./base/typography.css');
 @import url('./elements/buttons.css');
 @import url('./elements/forms.css');
 @import url('./elements/blocks.css');
