--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -22,6 +22,11 @@
                 text-align: center;
             }
 
+            h4 {
+                color: var(--p-color);
+                font-weight: 400;
+            }
+
             .buttonContainer {
                 display: flex;
                 flex-direction: column;
@@ -64,8 +69,8 @@
             height: calc(100vh - 120px);
 
             .heroContent {
-                margin-bottom: 10em;
-                padding: 0 2em;
+                margin-bottom: 6em;
+                padding: 0 4em;
 
                 h1 {
                     font-size: 2.5em;
@@ -75,6 +80,8 @@
                 .buttonContainer {
                     display: flex;
                     flex-direction: row;
+                    justify-content: space-around;
+
                     margin: 2em 0;
 
                     a {
@@ -115,7 +122,7 @@
 
             .heroContent {
                 margin: 0;
-                padding: 0;
+                padding: 0 6.5em;
 
                 h1 {
                     margin: 0;
@@ -128,13 +135,13 @@
                     width: 100%;
                     display: flex;
                     flex-direction: row;
-                    justify-content: center;
+                    gap: 2em;
                     font-size: 1em;
 
                     a {
                         font-size: 1.2em;
                         z-index: 1;
-                        width: 40%;
+                        width: 100%;
                     }
                 }
             }
