--- a/src/pages/header/site-header.module.css
+++ b/src/pages/header/site-header.module.css
@@ -256,6 +256,10 @@
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+
+    svg {
+        margin-right: 0.5em;
+    }
 }
 
 /* Add a grey background color to dropdown links on hover */
