--- a/src/pages/dashboard/tabs/sidebar/sidebar.module.css
+++ b/src/pages/dashboard/tabs/sidebar/sidebar.module.css
@@ -1,79 +1,34 @@
-/*---------------------------------------
-  TAB BAR              
------------------------------------------*/
-.tab-content {
-    background-color: var(--white-color);
-    border-radius: var(--border-radius-medium);
-}
-/* 
-.nav-tabs {
-    border-bottom: 1px solid var(--border-color);
-    margin-bottom: 35px;
-} */
-
-.nav-tabs .navLink {
-    border-radius: 20px;
-    border-top: 0;
-    border-right: 0;
-    border-left: 0;
-    color: var(--p-color);
-    font-size: var(--menu-font-size);
-    font-weight: var(--font-weight-normal);
-    padding: 15px 25px;
-    transition: all 0.3s;
-}
-
-/*---------------------------------------
-  NAVIGATION              
------------------------------------------*/
 .sidebarMenu {
     display: none;
     padding-top: 20px;
     min-width: 150px;
     flex: 0 0 max(15dvw);
     background: var(--white-color);
-}
 
-.sidebarIcons {
-    width: 20px;
-    padding-right: 0.5em;
-}
+    .nav {
+        list-style: none;
 
-.nav {
-    list-style: none;
-}
+        li:last-child {
+            position: absolute;
+            bottom: 1em;
+        }
+    }
 
-.navLink {
-    border-radius: var(--border-radius-small);
-    color: var(--p-color);
-    font-size: var(--menu-font-size);
-    display: inline-block;
-    position: relative;
-    margin-bottom: 0.1em;
-    margin-left: 1em;
-    padding: 0.2em;
-}
+    .featureBox {
+        background-color: var(--section-bg-color);
+        border-radius: var(--border-radius-medium);
+        padding: 0.5em 0em;
+        margin: 0.5em;
+        text-align: center;
+    }
 
-.sidebarMenu .navLink.active,
-.sidebarMenu .navLink:hover {
-    background: var(--primary-hover-color);
-    color: var(--white-color);
-}
-
-.featureBox {
-    background-color: var(--section-bg-color);
-    border-radius: var(--border-radius-medium);
-    padding: 0.5em 0em;
-    margin: 0.5em;
-    text-align: center;
-}
-
-.featureBox img {
-    display: block;
-    margin: auto;
-    margin-bottom: 0.5em;
-    width: 90px;
-    height: auto;
+    .featureBox img {
+        display: block;
+        margin: auto;
+        margin-bottom: 0.5em;
+        width: 90px;
+        height: auto;
+    }
 }
 
 @media (min-width: 900px) {
@@ -81,32 +36,3 @@
         display: block;
     }
 }
-
-/*---------------------------------------
-  PROFILE FORM, SEARCH
------------------------------------------*/
-/* .profile-form .input-group .form-control {
-    background: #e9ecef;
-}
-
-.profile-form .profile-image {
-    width: 52px;
-    height: 52px;
-}
-
-.profile-form
-    .input-group:not(.has-validation)
-    > :not(:last-child):not(.dropdown-toggle):not(.dropdown-menu):not(
-        .form-floating
-    ) {
-    border-radius: var(--border-radius-medium);
-}
-
-.profile-form
-    .input-group
-    > :not(:first-child):not(.dropdown-menu):not(.valid-tooltip):not(
-        .valid-feedback
-    ):not(.invalid-tooltip):not(.invalid-feedback) {
-    margin-left: 0;
-    border-radius: var(--border-radius-medium);
-} */
