--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -1,6 +1,8 @@
 .wrapper {
-    background: linear-gradient(to right, #b3cde0, #9ad2ee);
+    display: flex;
     width: 100%;
+    height: calc(100dvh - 40px);
+    background: linear-gradient(to left, #b3cde0, #9ad2ee);
 
     .loginContainer {
         display: none;
@@ -9,37 +11,24 @@
     .heroSection {
         display: flex;
         flex-direction: column;
-        justify-content: flex-start;
-        height: calc(100vh - 120px);
+        justify-content: space-between;
         text-align: center;
+        gap: 2em;
 
         .heroContent {
-            padding: 0 0.5em;
-            margin: 2em 0;
-            h1 {
-                font-size: 1.5em;
-                padding-bottom: 0.5em;
-                text-align: center;
-            }
-
-            h4 {
-                color: var(--p-color);
-                font-weight: 400;
-            }
+            display: flex;
+            flex-direction: column;
+            gap: 1em;
+            margin: 2em 1em;
 
             .buttonContainer {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
-                font-size: 1em;
                 gap: 1em;
-                z-index: 3;
-                margin: 1em auto;
 
                 a {
-                    font-size: small;
                     z-index: 1;
-                    width: 100%;
 
                     &:hover:first-child {
                         background-color: 'transparent';
@@ -51,50 +40,35 @@
         }
 
         .previewContainer {
-            overflow: hidden;
-            width: inherit;
-            height: auto;
+            height: inherit;
+
+            svg {
+                overflow: hidden;
+                width: auto;
+                height: inherit;
+                padding: 0 4em;
+            }
         }
     }
 }
 
-@media screen and (min-width: 600px) and (max-width: 1099px) {
+@media screen and (min-width: 750px) and (max-width: 1099px) {
     .wrapper {
         .loginContainer {
             display: none;
         }
 
         .heroSection {
-            display: block;
-            height: calc(100vh - 120px);
-
             .heroContent {
-                margin-bottom: 6em;
-                padding: 0 4em;
-
-                h1 {
-                    font-size: 2.5em;
-                    text-align: center;
-                }
-
                 .buttonContainer {
                     display: flex;
                     flex-direction: row;
-                    justify-content: space-around;
-
-                    margin: 2em 0;
+                    justify-content: space-between;
 
                     a {
-                        font-size: 1.2em;
-
-                        z-index: 1;
-                        width: 40%;
+                        width: 50%;
                     }
                 }
-            }
-
-            .previewContainer {
-                padding: 0 2em;
             }
         }
     }
@@ -102,33 +76,19 @@
 
 @media (min-width: 1100px) {
     .wrapper {
-        display: flex;
-        gap: 5em;
-        padding-right: 10em;
-
         .loginContainer {
-            flex: 1 0 max(200px);
             display: block;
             align-self: center;
+            margin: 0 auto;
+            width: max(300px, 25%);
         }
 
         .heroSection {
-            flex: 5;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            text-align: center;
-            height: calc(100vh - 70px);
+            padding: 2em;
+            width: 60%;
 
             .heroContent {
-                margin: 0;
-                padding: 0 6.5em;
-
-                h1 {
-                    margin: 0;
-                    font-size: 2.5em;
-                    text-align: center;
-                }
+                margin: 0em 1em;
 
                 .buttonContainer {
                     margin-top: 2em;
@@ -144,9 +104,6 @@
                         width: 100%;
                     }
                 }
-            }
-            .previewContainer {
-                padding: 0 3em;
             }
         }
     }
