update cursor pointer

--- a/src/css/elements/buttons.css
+++ b/src/css/elements/buttons.css
@@ -86,6 +86,7 @@
 }
 
 .custom-btn-fill:hover {
+    cursor: pointer;
     background: var(--section-bg-color);
     color: var(--primary-hover-color);
     border-color: var(--primary-hover-color);
