--- a/src/pages/dashboard/assets/custom-block.module.css
+++ b/src/pages/dashboard/assets/custom-block.module.css
@@ -32,7 +32,7 @@
     height: 40px;
 }
 
-.sendMonkeyContainer {
+.sendMoneyContainer {
     display: flex;
     justify-content: flex-start;
     flex-wrap: wrap;
