--- a/src/pages/header/site-header.module.css
+++ b/src/pages/header/site-header.module.css
@@ -215,7 +215,7 @@
 .dropdownNotifications {
     position: relative;
     display: inline-block;
-    height: auto;
+    height: 100%;
 }
 
 .hidden {
