--- a/src/pages/dashboard/assets/addfriends.module.css
+++ b/src/pages/dashboard/assets/addfriends.module.css
@@ -3,4 +3,9 @@
     flex-direction: row;
     gap: 0.5em;
     justify-content: flex-start;
+
+    input[type='number'] {
+        width: 100%;
+        height: 2.2em;
+    }
 }
