--- a/src/components/modals/modal.module.css
+++ b/src/components/modals/modal.module.css
@@ -1,4 +1,4 @@
-.modalBackground {
+.background {
     width: 100%;
     height: 100vh;
     background: rgba(0, 0, 0, 0.5);
@@ -12,13 +12,13 @@
 }
 
 @media (min-width: 768px) {
-    .modalBackground {
+    .background {
         height: calc(100vh - 45px);
         top: 45px;
     }
 }
 
-.modalContainer {
+.container {
     width: calc(min(100%, 400px) - 2em); /* subtract 2em for padding */
     max-width: calc(100vw - 2em); /* subtract 2em for padding */
     transition: all 150ms ease-in-out;
@@ -29,20 +29,20 @@
     margin: 0 auto;
 }
 
-.modalContainer .title {
+.container .title {
     text-align: center;
     margin-top: 1em;
 }
 
-.modalHeader {
+.header {
     display: flex;
     justify-content: flex-end;
 }
-.modalHeader h5 {
+.header h5 {
     flex: auto;
 }
 
-.modalHeader button {
+.header button {
     background-color: var(--secondary-color);
     border: none;
     border-radius: 0.4em;
@@ -62,12 +62,12 @@
 }
 
 @media (min-width: 1200px) {
-    .modalBackground {
+    .background {
         height: calc(100vh - 45px);
         top: 45px;
     }
 
-    .modalContainer {
+    .container {
         width: 35%;
     }
 }
