--- a/src/pages/dashboard/assets/overview/assets/quick-send-money/quick-send.module.css
+++ b/src/pages/dashboard/assets/overview/assets/quick-send-money/quick-send.module.css
@@ -80,3 +80,54 @@
 .avatar:hover {
     border: 2px solid var(--primary-hover-color);
 }
+
+
+.customBlock {
+    background: var(--secondary-color);
+    border-radius: var(--border-radius-component);
+    position: relative;
+    overflow: hidden;
+    padding: 1em;
+}
+
+.customBlock h2,
+.customBlock p {
+    position: relative;
+    z-index: 1;
+}
+
+
+.customBlock.sectionBg,
+.sectionBg {
+    background-color: var(--section-bg-color);
+}
+
+.customBlock p {
+    color: var(--black-color);
+    margin-bottom: 0;
+}
+
+.customBlock small {
+    color: var(--p-color);
+    font-size: var(--btn-font-size);
+    letter-spacing: -0.5px;
+    text-transform: lowercase;
+}
+
+.customBlock.primaryBg {
+    background: var(--primary-bg-color);
+    overflow: visible;
+}
+
+.primaryBg {
+    overflow: visible;
+}
+
+
+.sendMoneyContainer {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    overflow: visible;
+    gap: 0.4em;
+}
