--- a/src/components/lists/rate/list-rate.module.css
+++ b/src/components/lists/rate/list-rate.module.css
@@ -17,9 +17,10 @@
 }
 
 .exchangeImage {
-    border-radius: var(--border-radius-small);
-    width: 55px;
-    height: auto;
+    border-radius: 5px;
+    aspect-ratio: 1/2;
+    width: 40px;
+    height: 25px;
     margin-right: 10px;
 }
 .currency {
