--- a/src/pages/dashboard/assets/overview/assets/quick-send-money/quick-send.module.css
+++ b/src/pages/dashboard/assets/overview/assets/quick-send-money/quick-send.module.css
@@ -1,133 +1,13 @@
-.threeDotsIcon {
-    aspect-ratio: 1;
-    height: 1.3em;
-    display: inline-block;
-    cursor: pointer;
-    position: relative;
-    color: var(--white-color);
-}
-
-.threeDotsIcon:hover {
-    color: var(--primary-hover-color);
-    transition: 0.1s ease;
-}
-
-.deleteIconBtn {
-    position: absolute;
-    color: red;
-    background-color: var(--heading-color);
-    border: 1px solid transparent;
-    border-radius: 50%;
-    font-size: 0.8em;
-    padding: 0.2em;
-    bottom: 0em;
-    right: 0em;
-    z-index: 3;
-    cursor: pointer;
-}
-
-.actionButtons {
-    position: absolute;
-    right: 2.2em;
-    top: 1em;
-    border: 1px solid var(--section-bg-color);
-    border-radius: 0.6em;
-    background-color: white;
-    color: black;
-    z-index: 3;
-    display: none;
-    cursor: pointer;
-}
-
-.actionButton {
-    cursor: pointer;
-    text-align: center;
-    margin: 0.3em;
-}
-.actionButton:hover {
-    color: var(--primary-bg-color);
-    border-radius: 1em;
-    background-color: whitesmoke;
-}
-
-.avatar {
-    border: 1px solid transparent;
-    border-radius: 20%;
-    position: relative;
-    width: 50px;
-    height: 50px;
-    z-index: 2;
-    cursor: pointer;
-}
-
-.avatar::before {
-    content: attr(data-key);
-    position: absolute;
-    top: -30px;
-    left: 50%;
-    transform: translateX(-50%);
-    opacity: 1;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
-    padding: 8px;
-    border-radius: 20%;
-    transition: opacity 0.3s, top 0.3s;
-    z-index: 2;
-    overflow: visible;
-    pointer-events: none;
-}
-
-.avatar:hover {
-    border: 2px solid var(--primary-hover-color);
-}
-
-
-.customBlock {
-    background: var(--secondary-color);
-    border-radius: var(--border-radius-component);
-    position: relative;
-    overflow: hidden;
-    padding: 1em;
-}
-
-.customBlock h2,
-.customBlock p {
-    position: relative;
-    z-index: 1;
-}
-
-
-.customBlock.sectionBg,
-.sectionBg {
-    background-color: var(--section-bg-color);
-}
-
-.customBlock p {
-    color: var(--black-color);
-    margin-bottom: 0;
-}
-
-.customBlock small {
-    color: var(--p-color);
-    font-size: var(--btn-font-size);
-    letter-spacing: -0.5px;
-    text-transform: lowercase;
-}
-
-.customBlock.primaryBg {
-    background: var(--primary-bg-color);
-    overflow: visible;
-}
-
-.primaryBg {
-    overflow: visible;
-}
-
-
 .sendMoneyContainer {
     display: flex;
     justify-content: flex-start;
     flex-wrap: wrap;
     overflow: visible;
     gap: 0.4em;
+
+    .notFound {
+        display: inline;
+        font-style: italic;
+        color: #eee;
+    }
 }
