add empty component wrapper and update imports css and exports

--- a/src/pages/dashboard/assets/overview/assets/banking-actions/banking-actions.module.css
+++ b/src/pages/dashboard/assets/overview/assets/banking-actions/banking-actions.module.css
@@ -1,45 +1,20 @@
-.customBlock {
-    background: var(--secondary-color);
-    border-radius: var(--border-radius-component);
-    position: relative;
-    overflow: hidden;
-    padding: 1em;
-}
-
-.customBlock h2,
-.customBlock p {
-    position: relative;
-    z-index: 1;
-}
-
 .customBlockBottom {
     background: var(--third-bg-color);
     position: relative;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     text-align: center;
-    gap: 1.4em;
     overflow: visible;
 }
 
-.customBlock.customBlockBottom small {
+.customBlockBottom small {
     text-transform: none;
-}
-
-.customBlock p {
-    color: var(--black-color);
-    margin-bottom: 0;
-}
-
-.customBlock small {
-    color: var(--p-color);
-    font-size: var(--btn-font-size);
-    letter-spacing: -0.5px;
-    text-transform: lowercase;
 }
 
 .transactionBtns {
     display: flex;
+    justify-content: center;
     gap: 1.2em;
     overflow: visible;
 }
