--- a/src/components/inputs/autocomplete/autocomplete.module.css
+++ b/src/components/inputs/autocomplete/autocomplete.module.css
@@ -5,6 +5,19 @@
     border-top: 1px solid #ddd;
 }
 
+.formGroup {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: left;
+}
+
+.formControl {
+    margin-bottom: 0px;
+    border: none;
+    width: 100%;
+}
+
 .suggestions {
     border-top-width: 0;
     list-style: none;
@@ -13,31 +26,19 @@
     overflow-y: auto;
     padding-left: 0;
     width: auto;
-
-    .active {
-        cursor: pointer;
-    }
-
-    li {
-        padding: 0.3em;
-        display: flex;
-        gap: 0.3em;
-        align-items: center;
-
-        .avatar {
-            width: 20px;
-            height: 20px;
-            border-radius: 20%;
-        }
-    }
 }
 
-.wrapper {
-    input {
-        border-bottom: 1px solid #ddd;
-        padding: 0.5rem;
-        width: 100%;
-    }
+.suggestions li {
+    padding: 0.3em;
+    display: flex;
+    gap: 0.3em;
+    align-items: center;
+}
+
+.wrapper input {
+    border-bottom: 1px solid #ddd;
+    padding: 0.5rem;
+    width: 100%;
 }
 
 .suggestions .wrapper {
@@ -45,7 +46,6 @@
     flex-direction: column;
     width: 60%;
     border: 1px solid #ddd;
-    /* border-top-style: none; */
     border-bottom-left-radius: 0.8em;
     border-bottom-right-radius: 0.8em;
     border-top-right-radius: 0.8em;
