update dashboard layout component and restructure routing, remove css import, update layout exports and update css

--- a/src/layout/dashboard/dashboard-layout.module.css
+++ b/src/layout/dashboard/dashboard-layout.module.css
@@ -1,3 +1,10 @@
+.mainWrapper {
+    background: var(--section-bg-color);
+    max-height: calc(100dvh - 30px);
+    display: flex;
+    width: 100dvw;
+}
+
 .bentoMainColumn {
     flex: 1 0 min(200px);
     flex-direction: column;
