--- a/src/pages/dashboard/assets/profile/profile-tab.module.css
+++ b/src/pages/dashboard/assets/profile/profile-tab.module.css
@@ -17,3 +17,68 @@
     position: relative;
     z-index: 1;
 }
+
+
+
+.bentoMainColumn {
+    flex: 1 0 min(200px);
+    flex-direction: column;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5em;
+}
+
+.bentoGridPlans {
+    flex: 1 0 200px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5em;
+}
+
+.bentoCell {
+    flex: 1 0 200px;
+}
+
+.bentoFillColumn {
+    flex: 5 0 min(200px);
+    flex-direction: column;
+    display: flex;
+    gap: 0.5em;
+}
+
+.bentoSideColumn {
+    flex: 0 0 max(150px);
+    flex-direction: column;
+    display: flex;
+    gap: 0.5em;
+}
+
+.contentContainer {
+    display: flex;
+    flex-direction: column;
+    width: 100dvw;
+    margin: 1em;
+    gap: 0.5em;
+    height: calc(100dvh - 70px);
+}
+.contentContainerProfileTab {
+    display: flex;
+    width: 100dvw;
+    margin: 1em;
+    gap: 0.5em;
+    height: calc(100dvh - 80px);
+}
+
+@media (min-width: 800px) {
+    .contentContainer {
+        flex-direction: row;
+    }
+}
+@media (min-width: 1100px) {
+    .contentContainer {
+        flex-direction: row;
+    }
+    .bentoSideColumn {
+        flex: 0 0 max(250px);
+    }
+}
