--- a/src/components/inputs/form-input/form-input.module.css
+++ b/src/components/inputs/form-input/form-input.module.css
@@ -10,6 +10,11 @@
         margin-left: 0.2em;
     }
 
+    label {
+        font-size: 16px;
+        margin-bottom: 0.5em;
+    }
+
     .error {
         color: red;
         font-size: 16px;
